# TODO-AWS

./: .env.docker  .gitignore  README.md  docker-compose.yml  docker.env.example  pyproject.toml
.github/workflows/: flow.txt  python-ci.yml
docs/: Flow.md
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/AttachmentSection/: AttachmentSection.css  AttachmentSection.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/components/NotificationPanel/: NotificationPanel.css  NotificationPanel.jsx
frontend/src/components/TodoForm/: TodoForm.css  TodoForm.jsx
frontend/src/services/: ApiClient.js  AttachmentApiService.js  NotificationApiService.js  TodoApiService.js
nginx/: nginx.conf
scripts/: init_localstack.sh
services/attachment_service/: Dockerfile  pyproject.toml
services/attachment_service/src/attachment_service/: __init__.py  main.py
services/attachment_service/src/attachment_service/application/dto/: __init__.py  attachment_dto.py
services/attachment_service/src/attachment_service/application/use_cases/: __init__.py  attachment_use_cases.py
services/attachment_service/src/attachment_service/config/: __init__.py  settings.py
services/attachment_service/src/attachment_service/domain/: __init__.py
services/attachment_service/src/attachment_service/domain/entities/: attachment_entity.py
services/attachment_service/src/attachment_service/domain/interfaces/: attachment_repository_interface.py  storage_service_interface.py
services/attachment_service/src/attachment_service/infrastructure/: __init__.py
services/attachment_service/src/attachment_service/infrastructure/persistence/: dynamodb_attachment_repository.py
services/attachment_service/src/attachment_service/infrastructure/storage/: s3_storage_adapter.py
services/attachment_service/src/attachment_service/presentation/controllers/: attachment_controller.py
services/notification_service/: Dockerfile  pyproject.toml
services/todo_service/: Dockerfile  pyproject.toml
tests/: __init__.py  conftest.py  pathing.py
tests/attachment_service/: __init__.py  test_main.py
tests/notification_service/: __init__.py  test_main.py
tests/todo_service/: __init__.py  test_main.py
(+39 files in other folders)
