[project]
name = "todo-app"
version = "1.0.0"
description = "TODO Microservice Application – monorepo workspace"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "localstack>=2026.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pylint>=3.2.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "boto3-stubs[s3,ses,dynamodb]>=1.34.0",
]

[tool.uv.workspace]
members = [
    "services/todo_service",
    "services/attachment_service",
    "services/notification_service",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pylint>=3.2.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "boto3-stubs[s3,ses,dynamodb]>=1.34.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["todo_service", "attachment_service", "notification_service"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
