[project]
name = "attachment-service"
version = "1.0.0"
description = "Attachment microservice – file storage via AWS S3 (LocalStack)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pylint>=3.2.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["attachment_service"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "R0903"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
